# git-sheets

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  RELEASE_NOTES.md  test.csv
.github/workflows/: ci.yml
docs/integration/: AUDIT.md  QUICK_REFERENCE.md  README.md  dependency-config.md
repo-index/scripts/: repo-diff.nu  repo-lookup.nu
snapshots/: test_1765918869-c1857090.toml
src/: errors.rs  lib.rs  main.rs
src/cli/: mod.rs
src/core/: errors.rs  mod.rs
src/diff/: mod.rs
src/hash/: mod.rs
src/hash/docs/integration/: EXECUTIVE_SUMMARY.md  INDEX.md
src/hash/docs/integration/examples/: README.md  full_stack_daily_development.sh
src/hash/docs/integration/repo-index/: QUICKSTART.md
src/hash/docs/integration/repo-index/scripts/: README.md  cargo-metadata-extractor.nu  repo-list.nu
tests/: integrations.rs
