[package]
name = "git-sheets"
version = "0.1.1"
edition = "2024"
license = "AGPL-3.0-or-later"
description = "Version control for spreadsheets - staging, commits, diffs for tables"
homepage = "https://github.com/CromboJambo"
repository = "https://github.com/CromboJambo/git-sheets"
authors = ["Dustin Grover <dustinjgrover@gmail.com>", "AI coding assistants such including:", "claude", "chatgpt", "gpt-oss", "devestral"]
readme = "README.md"
keywords = ["git", "spreadsheet", "version control"]
categories = ["development-tools", "command-line-utilities",]

[dev-dependencies]
tempfile = "3.8"

[[bin]]
name = "git-sheets"
path = "src/main.rs"

[lib]
name = "gitsheets"
path = "src/lib.rs"
